add horizontal scroll bar for first section

--- a/index.html
+++ b/index.html
@@ -65,56 +65,58 @@
                     </p>
                 </header>
 
-                <div>
-                    <figure>
+                <div class="horizontalScroll">
+                    <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Ranking</figcaption>
                         <p>
-                            How would you rank your combined efforts in all your different life categories, like personal development, professional goals, physical fitness, and relationship building?
+                            How would you rank your combined efforts in all your different life categories, like
+                            personal development, professional goals, physical fitness, and relationship building?
                         </p>
                     </figure>
-                    <!-- <figure>
-                            <img src="img/testIcon.svg" alt="">
-                            <figcaption>Ranking</figcaption>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                                suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                            </p>
-                        </figure> -->
-                    <figure>
+                    <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Bad Habits</figcaption>
                         <p>
-                                Make no mistake about it. Bad habits are called 'bad' for a reason. They kill our productivity and creativity. They slow us down. They hold us back from achieving our goals. And they're detrimental to our health.
-                            </p>
+                            Make no mistake about it. Bad habits are called 'bad' for a reason. They kill our
+                            productivity and creativity. They slow us down. They hold us back from achieving our goals.
+                            And they're detrimental to our health.
+                        </p>
                     </figure>
-                    <figure>
+                    <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Avoid Distractions</figcaption>
                         <p>
-                                We're surrounded by distractions. Whether it's emails, phone calls, text messages, social media notifications, or people entering and leaving your workspace, those distractions end up eating a good portion of your time.
-                             </p>
+                            We're surrounded by distractions. Whether it's emails, phone calls, text messages, social
+                            media notifications, or people entering and leaving your workspace, those distractions end
+                            up eating a good portion of your time.
+                        </p>
                     </figure>
-                    <figure>
+                    <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Procrastination</figcaption>
-                        <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at the last minute will typically end up costing you more.
+                        <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at
+                            the last minute will typically end up costing you more.
 
                         </p>
                     </figure>
-                    <figure>
+                    <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Failure isn't the end</figcaption>
-                        <p>While it's important to accept failure and not let it bog you down, it's also perfectly acceptable to get upset about it as long as you remember that failure is a stepping stone in your journey that is getting you to where you need to be.
+                        <p>While it's important to accept failure and not let it bog you down, it's also perfectly
+                            acceptable to get upset about it as long as you remember that failure is a stepping stone in
+                            your journey that is getting you to where you need to be.
 
                         </p>
                     </figure>
-                    <figure>
+                    <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Bussiness isn't Productivity</figcaption>
                         <p>
-                                Anyone who understands time management understands that being busy does not mean you are being productive. To be productive you need to be actively working at reaching all of your goals and doing so in a manner as efficient as possible.
-                            </p>
+                            Anyone who understands time management understands that being busy does not mean you are
+                            being productive. To be productive you need to be actively working at reaching all of your
+                            goals and doing so in a manner as efficient as possible.
+                        </p>
                     </figure>
                 </div>
             </article>
@@ -131,12 +133,16 @@
                         <div>
                             <h3>Calculates</h3>
                             <p>
-                                    The app evaluates the daily habits and rather than calculating streaks on a calendar, it calculates a percentage of times a certain habit has been done int he past 30, 60, or 90 days.
-                                </p>
+                                The app evaluates the daily habits and rather than calculating streaks on a calendar, it
+                                calculates a percentage of times a certain habit has been done int he past 30, 60, or 90
+                                days.
+                            </p>
                         </div>
                         <div>
-                            <h3>Average  at a glance</h3>
-                            <p>An app designed to summarize your life’s most important efforts into a simple composite number. Then, it averages out all the habits' averages into one overall average. All you do is tell the app which habits you performed each day.
+                            <h3>Average at a glance</h3>
+                            <p>An app designed to summarize your life’s most important efforts into a simple composite
+                                number. Then, it averages out all the habits' averages into one overall average. All you
+                                do is tell the app which habits you performed each day.
 
                             </p>
                         </div>
@@ -147,13 +153,16 @@
                     <aside>
                         <div>
                             <h3>Scale Up</h3>
-                            <p>There are so many productivity and habit tracking apps out there to measure progress in one area or another, but nothing that measures your overall life with a single metric.
+                            <p>There are so many productivity and habit tracking apps out there to measure progress in
+                                one area or another, but nothing that measures your overall life with a single metric.
 
                             </p>
                         </div>
                         <div>
                             <h3>Amazing Options</h3>
-                            <p>Users create an account, log in, and tell the app a list of habits they want to track. There are both prompts to add habits to your list, and spots to write your own. The app evaluates the daily habits and rather than calculating streaks on a calendar.
+                            <p>Users create an account, log in, and tell the app a list of habits they want to track.
+                                There are both prompts to add habits to your list, and spots to write your own. The app
+                                evaluates the daily habits and rather than calculating streaks on a calendar.
 
                             </p>
                         </div>
@@ -190,37 +199,37 @@
 
         <footer>
             <section class="footer">
-                    <div>
-                            <img src="img/lifeGpa.png" alt="lifeGPA-logo">
-                            <p>&copy 2019 LIfeGPA All Right Reserved</p>
-                        </div>
-                        <div>
-                            <p class="boldP">CONTACTS</p>
-                            <address>
-                                <p>
-                                Lambda <br>
-                                 3a Ladoke Akintola Rd, <br>
-                                     Ikeja GRA, <br>
-                                     Ikeja </p>
-                            </address>
-                        </div>
-                        <div>
-                            <p class="boldP">FOLLOW US</p>
-                            <div class="socialMedia">
-                                <img src="img/Twitter.svg" alt="twitter">
-                                <img class="fb" src="img/Facebook.svg" alt="faceBook">
-                                <img class="tbl" src="img/Tumblr.svg" alt="tumblr">
-                                <img src="img/Vimeo.svg" alt="vimeo">
-                            </div>
-            
-                        </div>
-                        <div>
-                            <p class="boldP">STUDIO</p>
-                            <p>
-                                Laura Martin Diogo <br>
-                                UX DESIGNER
-                            </p>
-                        </div>
+                <div>
+                    <img src="img/lifeGpa.png" alt="lifeGPA-logo">
+                    <p>&copy 2019 LIfeGPA All Right Reserved</p>
+                </div>
+                <div>
+                    <p class="boldP">CONTACTS</p>
+                    <address>
+                        <p>
+                            Lambda <br>
+                            3a Ladoke Akintola Rd, <br>
+                            Ikeja GRA, <br>
+                            Ikeja </p>
+                    </address>
+                </div>
+                <div>
+                    <p class="boldP">FOLLOW US</p>
+                    <div class="socialMedia">
+                        <img src="img/Twitter.svg" alt="twitter">
+                        <img class="fb" src="img/Facebook.svg" alt="faceBook">
+                        <img class="tbl" src="img/Tumblr.svg" alt="tumblr">
+                        <img src="img/Vimeo.svg" alt="vimeo">
+                    </div>
+
+                </div>
+                <div>
+                    <p class="boldP">STUDIO</p>
+                    <p>
+                        Laura Martin Diogo <br>
+                        UX DESIGNER
+                    </p>
+                </div>
             </section>
         </footer>
 
