add vertical scroll bar for mainArticle2

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     </h2>
                 </header>
                 <div>
-                    <aside>
-                        <div>
+                    <aside class="horizontalScroll2">
+                        <div class="card2">
                             <h3>Calculates</h3>
                             <p>
                                 The app evaluates the daily habits and rather than calculating streaks on a calendar, it
@@ -138,7 +138,7 @@
                                 days.
                             </p>
                         </div>
-                        <div>
+                        <div class="card2">
                             <h3>Average at a glance</h3>
                             <p>An app designed to summarize your life’s most important efforts into a simple composite
                                 number. Then, it averages out all the habits' averages into one overall average. All you
@@ -150,15 +150,15 @@
                     <figure>
                         <img src="img/featuresImg.svg" alt="featuresImg">
                     </figure>
-                    <aside>
-                        <div>
+                    <aside class="horizontalScroll2">
+                        <div class="card2">
                             <h3>Scale Up</h3>
                             <p>There are so many productivity and habit tracking apps out there to measure progress in
                                 one area or another, but nothing that measures your overall life with a single metric.
 
                             </p>
                         </div>
-                        <div>
+                        <div class="card2">
                             <h3>Amazing Options</h3>
                             <p>Users create an account, log in, and tell the app a list of habits they want to track.
                                 There are both prompts to add habits to your list, and spots to write your own. The app
