activate nav menu button

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
                     </figure>
                     <ul>
-                        <li clas><a href="">About us</a></li>
-                        <li><a href="">Features</a></li>
-                        <li><a href="">Contact Us</a></li>
+                        <li clas><a href="#about">About us</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
                     </ul>
                 </nav>
             </header>
@@ -56,7 +56,7 @@
 
         <main>
 
-            <article class="mainArticle1">
+            <article class="mainArticle1" id="about">
                 <header>
                     <h2>Why You Should Join US</h2>
                     <p>
@@ -121,7 +121,7 @@
                 </div>
             </article>
 
-            <article class="mainArticle2">
+            <article class="mainArticle2" id="features">
                 <header>
                     <h2>
                         All Features <br>
@@ -173,7 +173,7 @@
         </main>
 
 
-        <section class="contactUs">
+        <section class="contactUs" id="contact">
             <p>TRUSTED BY THE BEST</p>
             <figure>
                 <img src="img/Designmodo.svg" alt="designmodo">
