--- a/features.html
+++ b/features.html
@@ -23,105 +23,21 @@
                         <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
                     </figure>
                     <ul>
-                        <li clas><a href="#about">About us</a></li>
-                        <li><a href="features.html">Features</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li clas><a href="index.html">About us</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="index.html">Contact Us</a></li>
                     </ul>
                 </nav>
             </header>
 
-            <article class="banner">
-                <div class="bannerText">
-                    <h1>Plan. Create.</h1>
-                    <h1 class="organize">Organize.</h1>
-                    <h3>Welcome to the new you</h3>
-
-                    <figure class="bannerBtns">
-                        <a href="">
-                            <img src="img/googlePlay.svg" alt="bannerImg Google Play">
-                        </a>
-                        <a href="">
-                            <img src="img/appStore.svg" alt="bannerImg App Store">
-                        </a>
-                    </figure>
-                </div>
-
-                <figure class="bannerBackgroundImage">
-                    <img src="img/bannerBackgroundImg.svg" alt="banner BackgroundImg">
-                </figure>
-            </article>
-
+            
         </section>
 
 
         <main>
 
-            <article class="mainArticle1" id="about">
-                <header>
-                    <h2>Why You Should Join US</h2>
-                    <p>
-                        If you gave your life a grade right now, what would it be? <br>
-                        Not so sure? ... join us!
-                    </p>
-                </header>
 
-                <div class="horizontalScroll">
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Ranking</figcaption>
-                        <p>
-                            How would you rank your combined efforts in all your different life categories, like
-                            personal development, professional goals, physical fitness, and relationship building?
-                        </p>
-                    </figure>
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Bad Habits</figcaption>
-                        <p>
-                            Make no mistake about it. Bad habits are called 'bad' for a reason. They kill our
-                            productivity and creativity. They slow us down. They hold us back from achieving our goals.
-                            And they're detrimental to our health.
-                        </p>
-                    </figure>
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Avoid Distractions</figcaption>
-                        <p>
-                            We're surrounded by distractions. Whether it's emails, phone calls, text messages, social
-                            media notifications, or people entering and leaving your workspace, those distractions end
-                            up eating a good portion of your time.
-                        </p>
-                    </figure>
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Procrastination</figcaption>
-                        <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at
-                            the last minute will typically end up costing you more.
-
-                        </p>
-                    </figure>
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Failure isn't the end</figcaption>
-                        <p>While it's important to accept failure and not let it bog you down, it's also perfectly
-                            acceptable to get upset about it as long as you remember that failure is a stepping stone in
-                            your journey that is getting you to where you need to be.
-
-                        </p>
-                    </figure>
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Bussiness isn't Productivity</figcaption>
-                        <p>
-                            Anyone who understands time management understands that being busy does not mean you are
-                            being productive. To be productive you need to be actively working at reaching all of your
-                            goals and doing so in a manner as efficient as possible.
-                        </p>
-                    </figure>
-                </div>
-            </article>
-
-            <!-- <article class="mainArticle2" id="features">
+            <article class="mainArticle2" id="features">
                 <header>
                     <h2>
                         All Features <br>
@@ -168,7 +84,7 @@
                         </div>
                     </aside>
                 </div>
-            </article> -->
+            </article>
 
         </main>
 
