refactor all less files

--- a/features.html
+++ b/features.html
@@ -17,25 +17,22 @@
 
         <section class="section1">
 
-            <header>
+            <header id="headerNav">
                 <nav>
                     <figure>
-                        <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
+                        <a href="index.html"><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
                     </figure>
                     <ul>
-                        <li clas><a href="index.html">About us</a></li>
+                        <li clas><a href="index.html#about">About us</a></li>
                         <li><a href="#features">Features</a></li>
-                        <li><a href="index.html">Contact Us</a></li>
+                        <li><a href="/index.html#contact">Contact Us</a></li>
                     </ul>
                 </nav>
             </header>
-
-            
         </section>
 
 
         <main>
-
 
             <article class="mainArticle2" id="features">
                 <header>
@@ -103,7 +100,6 @@
 
             <h2>Let's Get in Touch</h2>
             <p>We're here to help and answer any question you might have. We look forward to hearing from you. <br>
-                <!-- For general inquiries check out our FAQ Page -->
             </p>
             <div class="usersInfo">
                 <input type="text" placeholder="Name">
@@ -116,7 +112,7 @@
         <footer>
             <section class="footer">
                 <div>
-                    <img src="img/lifeGpa.png" alt="lifeGPA-logo">
+                    <a href="#headerNav"><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
                     <p>&copy 2019 LIfeGPA All Right Reserved</p>
                 </div>
                 <div>
@@ -148,7 +144,6 @@
                 </div>
             </section>
         </footer>
-
 
     </div>
 </body>
