--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section class="section1">
 
-            <header>
+            <header id="headerNav">
                 <nav>
                     <figure>
                         <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
@@ -66,14 +66,7 @@
                 </header>
 
                 <div class="horizontalScroll">
-                    <figure class="card">
-                        <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Ranking</figcaption>
-                        <p>
-                            How would you rank your combined efforts in all your different life categories, like
-                            personal development, professional goals, physical fitness, and relationship building?
-                        </p>
-                    </figure>
+
                     <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Bad Habits</figcaption>
@@ -81,6 +74,14 @@
                             Make no mistake about it. Bad habits are called 'bad' for a reason. They kill our
                             productivity and creativity. They slow us down. They hold us back from achieving our goals.
                             And they're detrimental to our health.
+                        </p>
+                    </figure>
+                    <figure class="card">
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
+                        <figcaption>Ranking</figcaption>
+                        <p>
+                            How would you rank your combined efforts in all your different life categories, like
+                            personal development, professional goals, physical fitness, and relationship building?
                         </p>
                     </figure>
                     <figure class="card">
@@ -94,18 +95,18 @@
                     </figure>
                     <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Procrastination</figcaption>
-                        <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at
-                            the last minute will typically end up costing you more.
+                        <figcaption>Failure isn't the end</figcaption>
+                        <p>While it's important to accept failure and not let it bog you down, it's also perfectly
+                            acceptable to get upset about it as long as you remember that failure is a stepping stone in
+                            your journey that is getting you to where you need to be.
 
                         </p>
                     </figure>
                     <figure class="card">
                         <!-- <img src="img/testIcon.svg" alt=""> -->
-                        <figcaption>Failure isn't the end</figcaption>
-                        <p>While it's important to accept failure and not let it bog you down, it's also perfectly
-                            acceptable to get upset about it as long as you remember that failure is a stepping stone in
-                            your journey that is getting you to where you need to be.
+                        <figcaption>Procrastination</figcaption>
+                        <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at
+                            the last minute will typically end up costing you more.
 
                         </p>
                     </figure>
@@ -120,55 +121,6 @@
                     </figure>
                 </div>
             </article>
-
-            <!-- <article class="mainArticle2" id="features">
-                <header>
-                    <h2>
-                        All Features <br>
-                        That You Need
-                    </h2>
-                </header>
-                <div>
-                    <aside class="horizontalScroll2">
-                        <div class="card2">
-                            <h3>Calculates</h3>
-                            <p>
-                                The app evaluates the daily habits and rather than calculating streaks on a calendar, it
-                                calculates a percentage of times a certain habit has been done int he past 30, 60, or 90
-                                days.
-                            </p>
-                        </div>
-                        <div class="card2">
-                            <h3>Average at a glance</h3>
-                            <p>An app designed to summarize your life’s most important efforts into a simple composite
-                                number. Then, it averages out all the habits' averages into one overall average. All you
-                                do is tell the app which habits you performed each day.
-
-                            </p>
-                        </div>
-                    </aside>
-                    <figure>
-                        <img src="img/featuresImg.svg" alt="featuresImg">
-                    </figure>
-                    <aside class="horizontalScroll2">
-                        <div class="card2">
-                            <h3>Scale Up</h3>
-                            <p>There are so many productivity and habit tracking apps out there to measure progress in
-                                one area or another, but nothing that measures your overall life with a single metric.
-
-                            </p>
-                        </div>
-                        <div class="card2">
-                            <h3>Amazing Options</h3>
-                            <p>Users create an account, log in, and tell the app a list of habits they want to track.
-                                There are both prompts to add habits to your list, and spots to write your own. The app
-                                evaluates the daily habits and rather than calculating streaks on a calendar.
-
-                            </p>
-                        </div>
-                    </aside>
-                </div>
-            </article> -->
 
         </main>
 
@@ -200,7 +152,7 @@
         <footer>
             <section class="footer">
                 <div>
-                    <img src="img/lifeGpa.png" alt="lifeGPA-logo">
+                    <a href="#headerNav"><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
                     <p>&copy 2019 LIfeGPA All Right Reserved</p>
                 </div>
                 <div>
